[package]
name = "demonite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
libdogd = { git = "https://github.com/R-ARM/dogd.git", version = "0.2.0" }
paste = "1.0.12"
postcard = { version = "1.0.4", features = ["use-std"] }
serde = { version = "1.0.154", features = ["derive"] }
